--- a/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                                             <li>@Html.ActionLink("About", "About", "Home")</li>
                                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                                            <li>@Html.ActionLink("Wiki", "Index", "Wiki")</li>
                                             <li>@Html.ActionLink("Admin Zone", "Index", "Admin")</li>
                                         </ul>
                                     </nav>
